[gd_scene load_steps=69 format=3 uid="uid://c0hbi7fqujvbn"]

[ext_resource type="Script" path="res://src/farm/background.gd" id="1_gbnjo"]
[ext_resource type="Texture2D" uid="uid://cvtymdsmvlt5c" path="res://assets/farm/ground.png" id="2_6aw4d"]
[ext_resource type="Texture2D" uid="uid://dejmbtpxa2rtc" path="res://assets/1616tinygarden/tileset.png" id="2_ff0ec"]
[ext_resource type="SpriteFrames" uid="uid://kq0oilxeu05b" path="res://src/animation/frames_bg/tree_sf.tres" id="4_i4prq"]
[ext_resource type="Texture2D" uid="uid://fkkebykg1n4c" path="res://assets/farm/blightroots.png" id="4_smcf2"]
[ext_resource type="Texture2D" uid="uid://h2kf4qgrofsd" path="res://assets/farm/snowpoff2.png" id="5_2teuv"]
[ext_resource type="Texture2D" uid="uid://hqbvii1kv3il" path="res://assets/farm/snowpoff.png" id="6_33alu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_n4x4v"]
texture = ExtResource("2_ff0ec")
0:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
6:4/0 = 0
15:2/0 = 0
15:3/0 = 0
15:4/0 = 0
16:3/0 = 0
16:2/0 = 0
14:4/0 = 0
16:4/0 = 0

[sub_resource type="TileSet" id="TileSet_djvk5"]
sources/0 = SubResource("TileSetAtlasSource_n4x4v")

[sub_resource type="AtlasTexture" id="AtlasTexture_tg0hf"]
atlas = ExtResource("4_smcf2")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_erwq7"]
atlas = ExtResource("4_smcf2")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_flndv"]
atlas = ExtResource("4_smcf2")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndbu6"]
atlas = ExtResource("4_smcf2")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_slju6"]
atlas = ExtResource("4_smcf2")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_465ki"]
atlas = ExtResource("4_smcf2")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_541mc"]
atlas = ExtResource("4_smcf2")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_40ad1"]
atlas = ExtResource("4_smcf2")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6x7w8"]
atlas = ExtResource("4_smcf2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddkk4"]
atlas = ExtResource("4_smcf2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l7ll0"]
atlas = ExtResource("4_smcf2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o85ym"]
atlas = ExtResource("4_smcf2")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnmj1"]
atlas = ExtResource("4_smcf2")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_upe0b"]
atlas = ExtResource("4_smcf2")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxtod"]
atlas = ExtResource("4_smcf2")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8m5mw"]
atlas = ExtResource("4_smcf2")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8fuc"]
atlas = ExtResource("4_smcf2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijsg4"]
atlas = ExtResource("4_smcf2")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p22n3"]
atlas = ExtResource("4_smcf2")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_123iw"]
atlas = ExtResource("4_smcf2")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_14kty"]
atlas = ExtResource("4_smcf2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_outb1"]
atlas = ExtResource("4_smcf2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfqmf"]
atlas = ExtResource("4_smcf2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8d4w2"]
atlas = ExtResource("4_smcf2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_apugl"]
atlas = ExtResource("4_smcf2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r11bf"]
atlas = ExtResource("4_smcf2")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnhrh"]
atlas = ExtResource("4_smcf2")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4f48"]
atlas = ExtResource("4_smcf2")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2qh0"]
atlas = ExtResource("4_smcf2")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q63ao"]
atlas = ExtResource("4_smcf2")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_voifi"]
atlas = ExtResource("4_smcf2")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffthf"]
atlas = ExtResource("4_smcf2")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_uxiol"]
atlas = ExtResource("4_smcf2")
region = Rect2(0, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_l0y7c"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tg0hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_erwq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flndv")
}],
"loop": false,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndbu6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_slju6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_465ki")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_541mc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_40ad1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6x7w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddkk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l7ll0")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"attack_to_none",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o85ym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnmj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upe0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxtod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8m5mw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8fuc")
}],
"loop": false,
"name": &"attack_to_safe",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijsg4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p22n3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_123iw")
}],
"loop": false,
"name": &"attack_to_threat",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"none",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_14kty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_outb1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfqmf")
}],
"loop": false,
"name": &"safe",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8d4w2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_apugl")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"safe_to_none",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r11bf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnhrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4f48")
}],
"loop": false,
"name": &"threat",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2qh0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q63ao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_voifi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffthf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxiol")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"threat_to_none",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_6tymq"]
atlas = ExtResource("5_2teuv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nij6p"]
atlas = ExtResource("5_2teuv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqccf"]
atlas = ExtResource("5_2teuv")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dv6ld"]
atlas = ExtResource("5_2teuv")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_hn4br"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tymq")
}],
"loop": false,
"name": &"spring1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nij6p")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"spring2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqccf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dv6ld")
}],
"loop": false,
"name": &"winter",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_e62wk"]
atlas = ExtResource("5_2teuv")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hvnj"]
atlas = ExtResource("5_2teuv")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1jlj"]
atlas = ExtResource("5_2teuv")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nw000"]
atlas = ExtResource("5_2teuv")
region = Rect2(48, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ewk5n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e62wk")
}],
"loop": false,
"name": &"spring1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hvnj")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"spring2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1jlj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nw000")
}],
"loop": false,
"name": &"winter",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nlpo1"]
atlas = ExtResource("5_2teuv")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6qyk"]
atlas = ExtResource("5_2teuv")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2w1m"]
atlas = ExtResource("5_2teuv")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_at7wk"]
atlas = ExtResource("5_2teuv")
region = Rect2(48, 32, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_rro7x"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlpo1")
}],
"loop": false,
"name": &"spring1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6qyk")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"spring2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2w1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_at7wk")
}],
"loop": false,
"name": &"winter",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_2mpis"]
atlas = ExtResource("6_33alu")
region = Rect2(0, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fefa4"]
atlas = ExtResource("6_33alu")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_blyrc"]
atlas = ExtResource("6_33alu")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7l8o"]
atlas = ExtResource("6_33alu")
region = Rect2(96, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_db805"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2mpis")
}],
"loop": false,
"name": &"spring1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fefa4")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"spring2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_blyrc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7l8o")
}],
"loop": false,
"name": &"winter",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_nhw6u"]
atlas = ExtResource("6_33alu")
region = Rect2(0, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_680du"]
atlas = ExtResource("6_33alu")
region = Rect2(32, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_k7q45"]
atlas = ExtResource("6_33alu")
region = Rect2(64, 16, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jmeaa"]
atlas = ExtResource("6_33alu")
region = Rect2(96, 16, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_tby74"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhw6u")
}],
"loop": false,
"name": &"spring1",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_680du")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"spring2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7q45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jmeaa")
}],
"loop": false,
"name": &"winter",
"speed": 5.0
}]

[node name="Background" type="Node2D"]
script = ExtResource("1_gbnjo")

[node name="Ground" type="Sprite2D" parent="."]
visible = false
texture_repeat = 2
scale = Vector2(5.7, 5.7)
texture = ExtResource("2_6aw4d")
region_enabled = true
region_rect = Rect2(0, 0, 1920, 1080)

[node name="TileMap" type="TileMap" parent="."]
texture_filter = 1
scale = Vector2(5.71384, 5.62504)
tile_set = SubResource("TileSet_djvk5")
format = 2
layer_0/name = "Ground"
layer_0/tile_data = PackedInt32Array(589836, 589824, 1, 655365, 589824, 1, 655366, 655360, 1, 524302, 589824, 1, 589838, 786432, 4, 458767, 589824, 1, 524303, 786432, 4, 262160, 589824, 0, 327696, 589824, 2, 393232, 851968, 2, 458768, 786432, 4, 196625, 851968, 2, 262161, 786432, 2, 327697, 786432, 4, 589837, 720896, 1, 17, 851968, 1, 131089, 851968, 1, 65553, 851968, 2, 655372, 786432, 4, 655371, 720896, 1, 655370, 655360, 1, 655369, 655360, 1, 655368, 720896, 1, 655367, 655360, 1, 720901, 786432, 3, 720900, 589824, 1)
layer_1/name = "Props"
layer_1/tile_data = PackedInt32Array(6, 1048576, 1, 655370, 917504, 2, 720906, 1048576, 1, 327697, 983040, 0, 327696, 983040, 0, 327698, 983040, 1, 327699, 983040, 1, 327700, 983040, 1, 327694, 1048576, 1, 327695, 983040, 1, 589826, 851968, 5, 65537, 917504, 5, 131074, 1114112, 3, 524301, 983040, 1, 655378, 0, 5, 65555, 131072, 5, 131087, 589824, 5, 65551, 720896, 5, 589830, 327680, 5, 720896, 131072, 5, 131075, 1179648, 3, 196611, 1179648, 4, 262147, 1179648, 5, 131076, 1245184, 3, 196612, 1245184, 4, 262148, 1245184, 5, 458765, 1048576, 1, 524300, 983040, 1, 524299, 983040, 1, 524298, 983040, 1, 524297, 983040, 1, 524296, 1048576, 1, 524295, 983040, 1, 524294, 983040, 1, 524293, 1048576, 1, 589834, 983040, 1, 458757, 983040, 1, 7, 1048576, 1, 8, 983040, 1, 9, 1048576, 1, 10, 1048576, 1, 11, 1048576, 1, 65547, 1048576, 1, 65548, 983040, 1, 65549, 1048576, 1, 131085, 1048576, 1, 131086, 1048576, 1, 196622, 983040, 1, 262158, 1048576, 1, 393230, 983040, 1, 393229, 983040, 1, 196610, 1114112, 4, 262146, 1114112, 5, 458756, 1048576, 1, 458755, 1048576, 1, 393219, 1048576, 1, 327683, 1048576, 1, 393220, 458752, 5)
layer_2/name = "Props 2"
layer_2/tile_data = PackedInt32Array(720906, 917504, 3, 589834, 917504, 1, 327695, 917504, 0, 327698, 1048576, 0)

[node name="Blightroots" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1553, 484)
scale = Vector2(5.7, 5.7)
sprite_frames = SubResource("SpriteFrames_l0y7c")
animation = &"none"

[node name="Tree" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(92, 499)
scale = Vector2(5.7, 5.7)
sprite_frames = ExtResource("4_i4prq")
animation = &"spring1"

[node name="Tree2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1735, 307)
scale = Vector2(5.7, 5.7)
sprite_frames = ExtResource("4_i4prq")
animation = &"spring1"

[node name="Tree3" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1457, 850)
scale = Vector2(5.7, 5.7)
sprite_frames = ExtResource("4_i4prq")
animation = &"spring1"

[node name="Snow1" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(320, 49)
scale = Vector2(5.7, 5.7)
sprite_frames = SubResource("SpriteFrames_hn4br")
animation = &"spring1"

[node name="Snow2" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(591, 136)
scale = Vector2(5.7, 5.7)
sprite_frames = SubResource("SpriteFrames_ewk5n")
animation = &"spring1"

[node name="Snow3" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1693, 44)
scale = Vector2(5.7, 5.7)
sprite_frames = SubResource("SpriteFrames_rro7x")
animation = &"spring1"

[node name="Snow4" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(233, 954)
scale = Vector2(5.7, 5.7)
sprite_frames = SubResource("SpriteFrames_db805")
animation = &"spring1"

[node name="Snow5" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(1644, 854)
scale = Vector2(5.7, 5.7)
sprite_frames = SubResource("SpriteFrames_tby74")
animation = &"spring1"
